--- a/docs/posts/2024-07-22-hello-word-2.md
+++ b/docs/posts/2024-07-22-hello-word-2.md
@@ -193,7 +193,7 @@ $$
 A blog theme for VuePress 2.
 :::
 
-::: link {/img/links/me.png} [My Blog](https://blog.zxh.io)
+::: link {/img/links/me.svg} [My Blog](https://blog.zxh.io)
 My blog 🧐, powered by VuePress 2, themed by Gungnir.
 :::
 
